@@ -1,3 +1,0 @@
-usr/bin/systemadm
-usr/share/man/man1/systemadm.1
-usr/bin/systemd-gnome-ask-password-agent
